# NovelSpine

./: .gitignore  LICENSE  README-desktop.md  README.md  novelflow-sidecar.spec  novelspine-gui.spec  novelspine-sidecar.spec  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/a11y/: LiveRegion.tsx  LiveRegionContext.tsx  useModalA11y.ts  useRovingTabIndex.ts
apps/web/src/api/: client.ts
apps/web/src/bridge/: tauri.ts
apps/web/src/components/: ActivityLog.tsx  AudiobookSettingsModal.tsx  AudiobookSwitchModal.tsx  KeyboardShortcutsModal.tsx  ProgressFooter.tsx  SectionPickerModal.tsx  SettingsModal.tsx  ToastStack.tsx  WorkTabLayout.tsx
apps/web/src/lib/: audiobookEstimate.ts  files.ts
apps/web/src/player/: AudiobookSelector.tsx  BookReaderPanel.tsx  BookTimeline.tsx  BookTimelineSegment.tsx  ChapterPanel.tsx  MiniPlayerBar.tsx  PanelResizeHandle.tsx  PlayerContext.tsx  PlayerLibraryRow.tsx  PlayerOverlays.tsx  PlayerStage.tsx  SeekBar.tsx  SidebarPanelIcons.tsx  TransportControls.tsx  readerTiming.ts  timeUtils.ts  usePlayerColumnWidths.ts  usePlayerSidebarState.ts  useReaderPanelState.ts
apps/web/src/tabs/: AudiobookTab.tsx  DocumentTab.tsx  PlayerTab.tsx
scripts/: build-msix.ps1  build-sidecar.ps1  clean.ps1  download_sample_pdfs.py  fetch-ffmpeg.ps1  generate_icon.py  package.ps1  stage-sidecar-internal.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/msix/: AppxManifest.template.xml
src-tauri/permissions/: open-with-app.toml  reveal-in-explorer.toml
src-tauri/src/: lib.rs  main.rs
src/novelflow/: __init__.py  audio_merge.py  audiobook.py  book_structure.py  convert.py  cover_art.py  ffmpeg_path.py  path_utils.py  player.py  project_output.py  refine.py  sidecar_entry.py  tts_engines.py
src/novelflow/api/: __init__.py  __main__.py  app.py  dialogs.py  files.py  jobs.py  library.py  prefs.py  schemas.py
src/novelspine/: __init__.py  __main__.py  audio_merge.py  audiobook.py  book_structure.py  cli.py  convert.py  cover_art.py  ffmpeg_path.py  gui.py  gui_audiobook_tab.py  gui_document_tab.py  gui_entry.py  gui_jobs.py  gui_player_tab.py  gui_settings.py  gui_theme.py  paths.py  player.py  project_output.py  reader_sidecar.py  refine.py  sidecar_entry.py  tts_config.py  tts_engines.py  user_paths.py
src/novelspine/api/: __init__.py  __main__.py  app.py  files.py  jobs.py  library.py  prefs.py  schemas.py
tests/: test_api.py  test_audiobook_cache.py  test_book_structure.py  test_cover_art.py  test_ffmpeg_path.py  test_integration_pdfs.py  test_path_utils.py  test_pdf_cover.py  test_player_scan.py  test_player_time_utils.py  test_prefs.py  test_project_output.py  test_reader_sidecar.py  test_refine.py  test_refine_sanitize_integration.py  test_text_cleanup.py  test_tts_text.py
