[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novelspine"
version = "1.0.0"
description = "Convert PDF novels to readable markdown and chapter-marked audiobooks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["pdf", "markdown", "pymupdf", "ebook", "fiction", "audiobook", "tts"]
authors = [{ name = "NovelSpine" }]
dependencies = [
    "pymupdf>=1.24.0",
]

[project.scripts]
novelspine = "novelspine.cli:main"
novelspine-gui = "novelspine.gui:main"
novelspine-api = "novelspine.api.__main__:main"

[project.optional-dependencies]
audiobook = [
    "edge-tts>=6.1.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]
gui = [
    "pygame>=2.5",
    "tkinterdnd2>=0.4",
]
desktop = [
    "novelspine[audiobook,api]",
]
build = ["pyinstaller>=6.0"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/novelspine"]

[tool.hatch.build.targets.wheel.force-include]
"src/novelspine/assets/icon.ico" = "novelspine/assets/icon.ico"
"src/novelspine/assets/icon.png" = "novelspine/assets/icon.png"
